allow force deletion of meetings when deleting a service body
fix test
